Fix receiver name overflows

--- a/web/static/css/components/receiver.css
+++ b/web/static/css/components/receiver.css
@@ -13,6 +13,9 @@
   padding: 0 $padding;
   line-height: $button-size;
   flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .receiver--volume {
